--- a/src/components/Index/Analys/Analys.css
+++ b/src/components/Index/Analys/Analys.css
@@ -666,3 +666,136 @@ button[data-v-76861cc0] {
     margin-right: -15px;
     margin-left: -15px;
 }
+
+.flex-50[data-v-0dc9f329] {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+}
+
+.flex-100[data-v-0dc9f329] {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+#binaryTransaction[data-v-35bea3d4] {
+    height: calc(100vh - 67px);
+    color: #fff;
+    padding: 0.5rem 10px;
+    background-color: #080d1f;
+}
+
+ul[data-v-35bea3d4] {
+    list-style: none;
+    padding-left: 0;
+}
+
+.nav-tabs {
+    border-bottom: 1px solid #dee2e6;
+}
+
+.nav-tabs .nav-item[data-v-35bea3d4] {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 auto;
+    flex: 1 auto;
+}
+
+.nav-tabs .nav-item {
+    margin-bottom: -1px;
+}
+
+#main-content #binaryPage #rightContent #binaryTransaction .nav-tabs .nav-item .nav-link[data-v-35bea3d4] {
+    font-weight: 400!important;
+}
+#main-content #binaryPage #rightContent #binaryTransaction .nav-tabs .nav-item .nav-link {
+    font-weight: 400!important;
+}
+#main-content #binaryPage #rightContent #binaryTransaction .nav-tabs .nav-item .nav-link {
+    font-weight: 400!important;
+}
+.nav-tabs .nav-item .nav-link.active[data-v-35bea3d4] {
+    color: #fff;
+    background: transparent;
+}
+.nav-tabs .nav-item .nav-link[data-v-35bea3d4] {
+    font-weight: 700;
+    position: relative;
+    text-align: center;
+    color: hsla(0,0%,100%,.5);
+    border: none;
+    border-bottom: 1px solid #8b8d96;
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: #495057;
+    background-color: #fff;
+    border-color: #dee2e6 #dee2e6 #fff;
+}
+.nav-tabs .nav-link {
+    border: 1px solid transparent;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+}
+a:not(.md-button) {
+    text-decoration: none;
+}
+a:not(.md-button) {
+    transition: .3s cubic-bezier(.25,.8,.25,1);
+    transition-property: color,background-color,opacity;
+}
+.nav-link {
+    display: block;
+    padding: 0.5rem 1rem;
+}
+
+.nav-tabs .nav-item .nav-link.active[data-v-35bea3d4]:before {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 4px;
+    background-color: #5dc1b9;
+}
+
+.text-uppercase {
+    text-transform: uppercase!important;
+}
+
+#main-content #binaryPage #rightContent #binaryTransaction .nav-tabs .nav-item .nav-link .totalCount[data-v-35bea3d4] {
+    right: 8px;
+    line-height: 14px;
+    background: #fc5f5f;
+}
+
+.nav-tabs .nav-item .nav-link .totalCount[data-v-35bea3d4] {
+    color: #fff;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 16px;
+    font-size: 10px;
+    background-color: #fa2843;
+}
+
+.scroll-area[data-v-35bea3d4] {
+    position: relative;
+    height: calc(100% - 45px);
+}
+
+.ps[data-v-35bea3d4] {
+    overflow: hidden!important;
+    overflow-anchor: none;
+    -ms-overflow-style: none;
+    touch-action: auto;
+    -ms-touch-action: auto;
+}
+
+.nav-tabs {
+    border-bottom: 1px solid #dee2e6;
+}
