--- a/src/components/Index/Chart/index.scss
+++ b/src/components/Index/Chart/index.scss
@@ -907,9 +907,9 @@
   background: #fc5f5f !important;
 }
 
-.empty {
-  background: #637284;
-}
+// .empty {
+//   background: #637284;
+// }
 
 .minutes-set {
   float: left;
