--- a/src/components/Index/Header/Header.css
+++ b/src/components/Index/Header/Header.css
@@ -1055,3 +1055,40 @@ span[data-v-03c925ae] {
         padding-right: 15px;
     }
 }
+
+.notification-dropdown-button.mobile .notification-dropdown-button-icon {
+    width: 38px;
+    height: 38px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border-radius: 4px;
+}
+.bgSecondary3, .bgSecondary3-hover:hover, .bgSecondary4 {
+    background-color: #02142b!important;
+}
+
+.notification-dropdown-button.mobile .notification-dropdown-button-icon {
+    width: 38px;
+    height: 38px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border-radius: 4px;
+}
+
+.bgSecondary4 {
+    background-color: #02142b!important;
+}
